# palhub

./: .dockerignore  .gitignore  LICENSE  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml  hosted-sync.yml
agent/: .env.example  README.md  palhub-agent.state.json  pyproject.toml  register_task.ps1  run_agent.ps1  run_agent.vbs
agent/palhub_agent/: __init__.py  cli.py  hosted.py  parser.py  publisher.py  sources.py  state.py
agent/palhub_agent/data/: pal_names.json
apps/api/: .env.example  Dockerfile  eslint.config.mjs  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.controller.ts  app.module.ts  main.ts  setup.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts
apps/api/src/common/: all-exceptions.filter.ts  crypto.ts  logging.interceptor.ts  zod-error.ts  zod-validation.pipe.ts
apps/api/src/ingest/: api-key.guard.ts  ingest.controller.ts  ingest.module.ts  ingest.service.ts
apps/api/test/: app.e2e-spec.ts  auth.e2e-spec.ts  authz.e2e-spec.ts  helpers.ts  ingest.e2e-spec.ts  internal.e2e-spec.ts  public.e2e-spec.ts  rgpd.e2e-spec.ts
apps/web/: Dockerfile  README.md  angular.json  eslint.config.mjs  package.json
apps/web/src/: index.html  styles.scss
apps/web/src/app/: app.html  (+4 more)
docs/: API.md
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.conf
tools/: build_breeding_data.py  build_map_data.py  build_map_tiles.py  build_pal_spawns.py  convert_static_data.py  gen_name_tables.py
tools/provenance/: PROVENANCE.md
(+64 files in other folders)
